Logging/test_app_nginx.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: log-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: log-test
  name: deployment-nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-nginx
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-nginx
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: app-nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: log-test
  name: service-nginx
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: log-test
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-nginx
              port:
                number: 80
