Logging/test_app_nginx_sidecar.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: log-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: log-test
  name: deployment-nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-nginx
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-nginx
    spec:
      serviceAccountName: fluentbit-sa
      containers:
      - image: 694448341573.dkr.ecr.ap-northeast-2.amazonaws.com/ubuntu-nginx:latest
        imagePullPolicy: Always
        name: app-nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: log-volume
          mountPath: /var/log/nginx
      - image: fluent/fluent-bit:latest
        name: fluent-bit-sidecar
        volumeMounts:
        - name: log-volume
          mountPath: /var/log/nginx
        - name: config-volume
          mountPath: /fluent-bit/etc/
      volumes:
      - name: log-volume
        emptyDir: {}
      - name: config-volume
        configMap:
          name: fluent-bit-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: log-test
  name: service-nginx
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: log-test
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-nginx
              port:
                number: 80
